configured the connection string

--- a/PaymentAPI/appsettings.json
+++ b/PaymentAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnectionString": "Data Source=ANOLDKUPARA\\MSSQLSERVER06;Initial Catalog=PaymentDB;Integrated Security=True"
+  }
 }
